# xstream

./: .seed-migrate.txt  ADVENTURE.md  Cargo.toml  DISCUSS_PATTERN.md  INTEGRATION.md  PROJECT_COMPLETE.md  README.md  RSB_INTEGRATION_STRATEGY.md  SESSION.md  SESSION_FINAL.md  test_clean.sh
.eggs/: egg.1.xstream-architecture-overview.txt  egg.2.rsb-evolution-story.txt  egg.3.three-tier-api-pattern.txt  egg.4.streamable-pattern-revolution.txt  egg.5.project-status-and-future.txt  egg.6.improved-driver-ceremonies.txt  egg.7.final-project-status-2025-09-08.txt  egg.8.rsb-framework-integration-candidates.txt  egg.9.xstream-future-roadmap.txt  xstream_real_operations.egg  xstream_summary.egg
.rebel/: YAP_ARCHITECTURAL_INNOVATIONS_20250907.md  YAP_CLAP_VIOLATION_20250908.md  YAP_COMPLEX_TYPES_VIOLATION_20250908.md  YAP_EXEMPLARY_PATTERNS_20250907.md  YAP_MANUAL_STD_USAGE_20250908.md  YAP_MISSING_RSB_IMPORTS_20250908.md  YAP_cargo_clap_dependency_20250908_120100.md  YAP_clap_usage_20250908_120000.md
docs/: ANALYSIS_RXOX.md  TRANSFORMERS.md  XSTREAM_SPEC.md  data-prd.txt  stream-prd.txt  thoughts.txt
docs/.rebel/: YAP_HUNT_SUMMARY_20250907.md  YAP_MINOR_VIOLATIONS_20250907.md
docs/proto/: howto_agent_orchestration.txt  howto_knowledge_transfer.txt  howto_multi_invoke.txt  howto_tool_parameters.txt  misc.txt
docs/ref/: rsb-adapter-pattern.md  rsb-patterns-v2.md  rsb-reference.md
examples/: integration_demo.rs
ref/: REBEL.md  colors.rs  rsb-architecture.md  rsb-quick-reference-v2.md  text_styles.rs
src/: adapter.rs  colors.rs  driver.rs  lib.rs  macros.rs  pretty.rs
src/xstream/: fork.rs  gate.rs  gen.rs  merge.rs  mod.rs  parse.rs  transform.rs
src/xstream/composable/: mod.rs
src/xstream/functions/: mod.rs
src/xstream/types/: bucket.rs  error.rs  mod.rs  (+3 more)
