[package]
name = "xstream"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "xstream-driver"
path = "src/driver.rs"

[[bin]]
name = "pretty"
path = "src/pretty.rs"

[[bin]]
name = "xstream-gen"
path = "src/bin/xstream-gen.rs"

[[bin]]
name = "xstream-color-gen"
path = "src/bin/xstream-color-gen.rs"

[dependencies]
# RSB framework with re-exported dependencies
rsb = { path = "../rsb" }
base64 = "0.22"
urlencoding = "2.1"
regex = "1.10"
serde_json = "1.0"
