[package]
name = "xstream"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0"            
license-file = "LICENSE"  
publish = false  

[[bin]]
name = "xstream-driver"
path = "src/driver.rs"

[[bin]]
name = "pretty"
path = "src/pretty.rs"

[[bin]]
name = "xstream-gen"
path = "src/bin/xstream-gen.rs"

[[bin]]
name = "xstream-color-gen"
path = "src/bin/xstream-color-gen.rs"

[dependencies]
# RSB framework with re-exported dependencies
rsb = { git = "https://github.com/oodx/rsb-framework", branch = "main" }

[features]
default = []
# Opt-in reuse of RSB visuals (colors, glyphs, prompts).
# Note: enabling this feature expects the `rsb` dependency
# to expose `visual::colors` (via its own feature flags).
rsb-visuals = []
